logs/mrsd_ros_tutorials/build.make.265.log.stderr
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp: In constructor ‘ImageConverter::ImageConverter()’:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:89:62: error: ‘apriltagCB’ is not a member of ‘ImageConverter’
     apriltag_sub = nh.subscribe("/apriltags/detections", 1, &ImageConverter::apriltagCB, this);
                                                              ^
make[2]: *** [CMakeFiles/subscribe_pc_node.dir/src/subscribe_pc_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/subscribe_pc_node.dir/all] Error 2
make: *** [all] Error 2
